--- a/spotify/package.json
+++ b/spotify/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.22.1",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
+    "vuefire": "^3.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
