--- a/spotify/package.json
+++ b/spotify/package.json
@@ -14,6 +14,7 @@
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "vue": "^3.2.47",
+    "vue-media": "^1.1.1",
     "vue-router": "^4.2.2",
     "vuefire": "^3.1.0",
     "vuex": "^4.0.2"
