--- a/spotify/package.json
+++ b/spotify/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.47",
     "vue-media": "^1.1.1",
     "vue-router": "^4.2.2",
+    "vue3-cookies": "^1.0.6",
     "vuefire": "^3.1.0",
     "vuex": "^4.0.2"
   },
