--- a/spotify/package.json
+++ b/spotify/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^7.2.96",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
+    "jsonwebtoken": "^9.0.0",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "vue": "^3.2.47",
