--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
     "jsonwebtoken": "^9.0.0",
+    "pinia": "^2.1.4",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "vue": "^3.2.47",
