--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "vue-media": "^1.1.1",
     "vue-router": "^4.2.2",
     "vue3-cookies": "^1.0.6",
-    "vuefire": "^3.1.0",
-    "vuex": "^4.1.0"
+    "vuefire": "^3.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
